# Housing_Crisis_PT

./: Data_Model.py  Data_Preprocessing.py  ML_model.py  README.md  pyproject.toml  scratch.py  screatch.py
DataSet/: Housing_prices.csv  aw_final.csv  hp_final.csv
