[tool.poetry]
name = "housing-crisis-pt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "housing_crisis_pt"}]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.4.1"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

